<resources>
    <string name="app_name">Glim</string>
    <string name="glim">Glim</string>
    <string name="phoneNumber">Phone</string>
    <string name="password">Password</string>
    <string name="loginButton">Log in</string>
    <string name="forgotDescription">Problem in Login?</string>
    <string name="or">OR</string>
    <string name="clickHere"> Click Here</string>
    <string name="facebook">Facebook Login</string>
    <string name="loginfacebook">Log in with Facebook</string>
    <string name="signup">Don\'t have an account?</string>
    <string name="signupcolor"> Sign Up</string>
    <string name="glimFont">Marquisette BTN Light</string>
    <string name="signUpText">Sign Up</string>
    <string name="login">Already have an account?</string>
    <string name="enterConfirmationCode">Enter Confirmation Code</string>
    <string name="codeMessage">Enter the 6-digit code</string>
    <string name="resendOTP">Request a new code</string>
    <string name="codeNext">Next</string>
    <string name="userName">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register_finish">Finish</string>
    <string name="details">Almost done</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="post">post</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_title_news">news</string>
    <string name="navigation_title_search">search</string>
    <string name="navigation_title_upload">upload</string>
    <string name="navigation_title_notification">notification</string>
    <string name="navigation_title_profile">profile</string>
    <string name="facebook_app_id">821885504681553</string>
    <string name="fb_login_protocol_scheme">fb821885504681553</string>
    <string name="profile_description">Profile name</string>
    <string name="description">Profile Picture</string>
    <string name="number_of_posts">post</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_text">Change Photo</string>
    <string name="uploading_one">Upload your Lovely and Romantic phone conversations. </string>
    <string name="uploading_one_text_two">Be secure</string>
    <string name="proceed">Proceed</string>
    <string name="user_name">Username</string>
    <string name="incorrect_name">Username already exist</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="save_button">Save Button</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="choose_file">Choose File</string>
    <string name="back_button">Back Button</string>
    <string name="go_premium">Go Premium</string>
    <string name="slide">Slide</string>
    <string name="feature_one">Feature !</string>
    <string name="upload_file">Upload</string>
    <string name="message">Message (Optional)</string>
</resources>
