<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_news"
        android:title="@string/navigation_title_news"
        android:icon="@drawable/ic_home_black_24dp"
    />

    <item
        android:id="@+id/navigation_search"
        android:title="@string/navigation_title_search"
        android:icon="@drawable/ic_search_black_24dp"

        />

    <item
        android:id="@+id/navigation_upload"
        android:title="@string/navigation_title_upload"
        android:icon="@drawable/ic_add_circle_black_24dp"
     />

    <item
        android:id="@+id/navigation_notification"
        android:title="@string/navigation_title_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        />

    <item
        android:id="@+id/navigation_profile"
        android:title="@string/navigation_title_profile"
        android:icon="@drawable/ic_person_black_24dp"

       />

</menu>
