<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/glim"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="70sp"
            app:fontFamily="@font/typeface"
            android:textStyle=""
            android:textColor="@color/glimColor"
            />
        <TextView
            android:id="@+id/error_response"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/invalid_color"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">



            <EditText
                android:id="@+id/username_from_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                android:inputType="text"
                android:background="@drawable/textfieldstyle"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                />

            <EditText
                android:id="@+id/password_from_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="10dp"
                android:background="@drawable/textfieldstyle"
                android:inputType="textPassword"
                android:textColorHint="@color/com_facebook_button_background_color_disabled"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="10dp">

            </LinearLayout>

            <Button
                android:id="@+id/goHomePageFromLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                android:layout_gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/loginButtonColor"
                android:background="@drawable/buttonstyle"
                />



        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgotDescription"/>
            <TextView
                android:layout_marginStart="5sp"
                android:layout_marginLeft="5sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/hintColor"
                android:text="@string/clickHere"/>

        </LinearLayout>


     <View
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="#000000"
         android:layout_marginTop="15dp"
         />
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>


    </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="match_parent"
       android:layout_gravity="center|bottom"
       android:gravity="center|bottom"
       android:layout_marginBottom="10dp"
       android:orientation="horizontal">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/signup"
          />

       <TextView
           android:id="@+id/sign_up"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="5sp"
           android:layout_marginLeft="5sp"
           android:text="@string/signupcolor"
           android:textColor="@color/hintColor"
           android:onClick="toRegistrationPage"/>
   </LinearLayout>
    </LinearLayout>


</LinearLayout>