<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    >
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/back_button"
        android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/rocket_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="-50dp"
            android:contentDescription="@string/back_button"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonChoose"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/com_facebook_button_background_color"
            android:gravity="center"
            android:text="@string/choose_file"
            android:textAllCaps="false"
            android:textColor="@color/loginButtonColor" />
        <EditText
            android:id="@+id/text_message"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/messagetextstyle"
            android:inputType="text"
            android:maxLength="100"
            android:textColor="@color/loginButtonColor"
            android:textColorHint="@color/com_facebook_button_background_color_disabled"
            android:visibility="gone"
            />
        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/com_facebook_button_background_color"
            android:gravity="center"
            android:text="@string/upload_file"
            android:textAllCaps="false"
            android:textColor="@color/loginButtonColor"
           android:visibility="gone" />

    </LinearLayout>



</LinearLayout>