<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationpageTwo"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/details"
            android:fontFamily="@font/koliko"
            app:fontFamily="@font/koliko"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="30sp"/>
        <TextView
            android:id="@+id/error_after_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/invalid_color"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:background="@drawable/textfieldstyle"
            android:padding="10dp"
            android:hint="@string/userName"/>
            <TextView
                android:id="@+id/invalid_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/incorrect_name"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/invalid_color"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:inputType="textPassword"
            android:background="@drawable/textfieldstyle"
            android:padding="10dp"
            android:hint="@string/password"/>
            <TextView
                android:id="@+id/invalid_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password_mismatch"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/invalid_color"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/c_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:background="@drawable/textfieldstyle"
            android:padding="10dp"
            android:hint="@string/confirmPassword"/>
            <TextView
                android:id="@+id/invalid_cpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/password_mismatch"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/invalid_color"
                android:layout_marginRight="20dp"
                android:visibility="gone"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/finish_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:text="@string/register_finish"
            android:textAllCaps="false"
            android:background="@drawable/buttonstyle"
            android:textColor="@color/loginButtonColor"/>
    </LinearLayout>


</LinearLayout>