<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoPremium"
    android:orientation="vertical"
    android:weightSum="100"
    >
   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="40"
       android:background="@drawable/qwe"
       >
       <ImageButton
           android:id="@+id/backButton"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:contentDescription="@string/slide"
           android:background="@drawable/ic_keyboard_arrow_left_black_24dp"/>

   </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:padding="5dp"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <!--List of the Features starts -->

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="0.2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:text="@string/feature_one"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="0.2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/feature_one"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="0.2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:text="@string/feature_one"/>
                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="0.2dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp"
                        android:text="@string/feature_one"/>
                </android.support.v7.widget.CardView>
                <!--List of the Features Ends -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_premium"
            android:textAllCaps="false"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:shadowColor="@color/colorPrimaryDark"
            android:background="@color/colorPrimary"
            android:textColor="@color/loginButtonColor"/>

        </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>